SERVER-643 prevent test failures involving mongobridge, be more careful about potentially reused uris